--- a/main.html
+++ b/main.html
@@ -8,7 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<ul>
+		<nav>
+		<li><a href="https://www.youtube.com/">Home</li>
+		<li><a href="https://www.youtube.com/feed/subscriptions">About us</li>
+		<li><a href="https://www.youtube.com/feed/playlists">Contact us</li>
+		</nav>
+	</ul>
+	<h2>3 random videos</h2>
+	<video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"></video>
+    <video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4"></video>
+	<video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4"></video>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
