--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 		<nav>
 			<ul>
-		<li><a href="https://www.youtube.com/">Home</li>
-		<li><a href="https://www.youtube.com/feed/subscriptions">About us</li>
-		<li><a href="https://www.youtube.com/feed/playlists">Contact us</li>
+		<li><a href="https://www.youtube.com/">Home</a></li>
+		<li><a href="https://www.youtube.com/feed/subscriptions">About us</a></li>
+		<li><a href="https://www.youtube.com/feed/playlists">Contact us</a></li>
 			</ul>		
 		</nav>
 	<h2>3 random videos</h2>
